--- a/index.html
+++ b/index.html
@@ -961,93 +961,6 @@
 							</form>
 
 
-
-
-              <form role="form" type="post" id="theform2">
-
-    <div class="form-group">
-      <label for="formControl11">Name *</label>
-      <input id="formControl11" type="text" class="form-control required" tabindex="0" aria-hidden="false" name="name" data-form-field="Name" required>
-    </div>
-    <div class="form-group">
-      <label for="formControl12">Email *</label>
-      <input type="email" id="formControl12" class="form-control required" tabindex="0" aria-hidden="false" name="email" data-form-field="Email" required>
-    </div>
-
-    <div class="form-group">
-      <label for="formControl13">Phone (optional)</label>
-      <input type="text" id="formControl13" class="form-control" tabindex="0" aria-hidden="false" name="phone" data-form-field="Phone">
-    </div>
-
-    <div class="form-group">
-      <label for="formControl14">Program Name *</label>
-      <input type="text" id="formControl14" class="form-control" tabindex="0" aria-hidden="false" name="Program Name" data-form-field="Program Name">
-    </div>
-
-    <div class="form-group">
-      <label for="formControl15">Project Name *</label>
-      <input type="text" id="formControl15" class="form-control" tabindex="0" aria-hidden="false" name="Project Name" data-form-field="Project Name">
-    </div>
-    <div class="form-group" style="font-size: 14px;">
-      * Required Field
-    </div>
-
-    <p>What data are you interested in submitting? (select all that apply)</p>
-    <div class="form-group">
-      <fieldset>
-        <div class="one">
-          <input class="form-check-input" type="checkbox" tabindex="-1" value="Participant Data" id="participantData" name="Interest 1">
-          <label class="" for="participantData">
-            <span class="visually-hidden">Data Type: </span>Participant Data
-          </label>
-        </div>
-        <div class="one">
-
-          <input class="form-check-input" type="checkbox" tabindex="-1" value="Partner Data" id="partnerData" name="Interest 2">
-          <label class="" for="partnerData">
-            <span class="visually-hidden">Data Type: </span>Partner Data
-          </label>
-        </div>
-        <div class="one">
-
-          <input class="form-check-input" type="checkbox" tabindex="-1" value="STEM BP Resources" id="stemBPResources" name="Interest 3">
-          <label class="" for="stemBPResources">
-            <span class="visually-hidden">Data Type: </span>STEM BP Resources
-          </label>
-        </div>
-        <div class="one">
-
-          <input class="form-check-input" type="checkbox" tabindex="-1" value="STEM BP Outcomes" id="stemBPOutcomes" name="Interest 4">
-          <label class="" for="stemBPOutcomes">
-            <span class="visually-hidden">Data Type: </span>STEM BP Outcomes
-          </label>
-        </div>
-
-        <div class="one">
-
-          <input class="form-check-input" type="checkbox" tabindex="-1" value="Collaborative Infrastructure" id="collaborativeInfrastructure" name="Interest 5">
-          <label class="" for="collaborativeInfrastructure">
-            <span class="visually-hidden">Data Type: </span>Collaborative Infrastructure
-          </label>
-        </div>
-
-
-      </fieldset>
-
-    </div>
-
-    <p class="small mt-3">Please select the button below to submit your request.  You will receive a response from a member of the Coordination Hub soon.</p>
-
-
-    <button type="submit" class="btn btn-info button-outlined mt-3 sendMessage" tabindex="-1" aria-hidden="false">
-      <i aria-hidden="true" class="fal fa-envelope brightBlue"></i>&nbsp;Submit
-      <div class="buttonOverlay"></div>
-    </button>
-
-
-  </form>
-
-
               <div class="success_message" style="display:flex;justify-content:center;display:none;overflow:none">
 								<h6 class="text-center">Your message was sent successfully!</h6>
 							</div>
@@ -1118,16 +1031,10 @@
 
 	</div>
 
-  <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
-
-
 
 	<div class="cursor"></div>
 
-
+  <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.validate.min.js"></script>
   <script src="assets/js/bootstrap.js"></script>
 
