--- a/index.html
+++ b/index.html
@@ -940,7 +940,8 @@
                   <div class="contacts-form">
 
 
-				      <form id="theform">
+
+                    <form role="form" type="post" id="theform">
 
 								<div class="form-group">
 									<label for="formControl1">Name *</label>
