--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto+Slab%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&#038;display=auto" type="text/css" media="all" >
 <link rel="stylesheet" href="vendorlibs/bootstrap/css/bootstrap.min.css">
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-<script type="text/javascript" src="vendorlibs/bootstrap/js/bootstrap.min.js"></script>
-   <script src="form.js"></script>
 
   <!-- CSS STYLES -->
   <link rel="stylesheet" href="assets/css/vendors/bootstrap.css" type="text/css" media="all" >
@@ -1064,10 +1060,19 @@
   <script src="assets/js/jquery.cookie.js"></script>
   <script src="assets/js/typed.js"></script>
   <script src="assets/js/common.js"></script>
- <!-- <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-auth.js"></script> -->
 
-<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="vendorlibs/bootstrap/js/bootstrap.min.js"></script>
+     <script src="form.js"></script>
+
+
+
+
+
+<!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-storage.js"></script>
@@ -1139,7 +1144,7 @@
     });
 
   }
-</script>
+</script> -->
 
   <!-- <script>
 
