--- a/index.html
+++ b/index.html
@@ -937,7 +937,9 @@
 
 
 
-                    <form role="form" type="post" id="theform">
+                    <form
+                    action="https://formspree.io/f/xlekwzle"
+                    method="POST">
 
 								<div class="form-group">
 									<label for="formControl1">Name *</label>
