--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,33 @@
   <script type="text/javascript" src="vendorlibs/bootstrap/js/bootstrap.min.js"></script>
      <script src="form.js"></script>
 
+<script>
+$('.back-to-top').click(() => {
+  scrollfn("#overview");
+})
 
+$('.back-to-top').on('keypress', () => {
+  scrollfn("#overview");
+})
+
+
+$(window).scroll(function () {
+  ((window.pageYOffset || document.documentElement.scrollTop) > 100) ? $('.back-to-top').css({ opacity: 1, visibility: "visible" }) : $('.back-to-top').css({ opacity: 0, visibility: "hidden" });
+});
+
+function scrollfn(e) {
+  let $target = $(e),
+  offSet = e === "#overview" ? 0 : $target.offset().top;
+  $('html, body').stop().animate({
+    'scrollTop': offSet
+  }, 1200, 'swing');
+
+
+}
+
+
+$('input').val('').removeAttr('checked').removeAttr('selected');
+</script>
 
 
 
