--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
 
                     <form
                     action="https://formspree.io/f/xlekwzle"
-                    method="POST">
+                    method="POST" id="submitForm">
 
 								<div class="form-group">
 									<label for="formControl1">Name *</label>
@@ -961,7 +961,7 @@
 
 
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 align-right mt-5">
-								<button type="submit" class="btn">
+								<button type="submit" class="btn submitIt">
     							Submit
 
     								</button>
@@ -1095,7 +1095,13 @@ function scrollfn(e) {
 }
 
 
-$('input').val('').removeAttr('checked').removeAttr('selected');
+$('.submitIt').click(function() {
+  $('#submitForm').hide();
+  $('.success_message').show();
+
+})
+
+
 </script>
 
 
