--- a/index.html
+++ b/index.html
@@ -935,11 +935,10 @@
                   <div class="bg-img" style="background-image: url(assets/images/pat-1.png);"></div>
                   <div class="contacts-form">
 
+                    <div id="submitForm">
 
-
-                    <form
-                    action="https://formspree.io/f/xlekwzle"
-                    method="POST" id="submitForm">
+                    <form action="https://formspree.io/f/xlekwzle"
+                    method="POST">
 
 								<div class="form-group">
 									<label for="formControl1">Name *</label>
@@ -968,6 +967,8 @@
                     </div>
 							</form>
 
+
+            </div>
               <div class="success_message" style="display:flex;justify-content:center;display:none;overflow:none">
               								<h6 class="text-center">Your message was sent successfully!</h6>
               							</div>
@@ -1095,7 +1096,9 @@ function scrollfn(e) {
 }
 
 
-$('.submitIt').click(function() {
+$('.submitIt').click(function(e) {
+  e.preventDefault()
+  console.log("sdfegkubsdvbuvdsbukdsbuk")
   $('#submitForm').hide();
   $('.success_message').show();
 
