--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
 
 
 
-              <div class="success_message" style="display:flex;justify-content:center;display:none;overflow:none">
+              <div class="success_message" style="display:flex;justify-content:center;display:none;overflow:none;margin-top:4em">
               								<h6 class="text-center">Your message was sent successfully!</h6>
               							</div>
 
